# pgmicro

./: Cargo.toml  README.md
.github/workflows/: pgmicro-ci.yml  pgmicro-napi.yml  pgmicro-publish.yml
cli/: Cargo.toml  pg_server.rs  pgmicro.rs
cli/config/: mod.rs
core/: Cargo.toml  connection.rs  copy.rs  function.rs  lib.rs  pg_catalog.rs  pg_dispatch.rs  pragma.rs  schema.rs  statement.rs  vtab.rs
core/ext/: mod.rs
core/functions/: mod.rs  postgres.rs
core/incremental/: cursor.rs
core/translate/: expr.rs  mod.rs  planner.rs  pragma.rs  schema.rs
core/vdbe/: execute.rs
macros/src/: test.rs
npm/: build.sh
npm/darwin-arm64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/pgmicro/: cli.js  index.js  package.json
parser/src/: ast.rs
parser/src/ast/: fmt.rs
parser_pg/: Cargo.toml
parser_pg/src/: lib.rs  translator.rs
pgmicro/: TODO.md
pgmicro/src/: main.rs
pgmicro/tests/: pgmicro.rs
testing/sqltests/tests/: scalar-functions-datetime.sqltest
tests/integration/: mod.rs
tests/integration/postgres/: catalog.rs  copy.rs  dialect.rs  mod.rs  table.rs  update_from.rs
